# recall-echo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  package.json  spec.md  tsconfig.json
.github/workflows/: release.yml
docs/: index.html
recall-graph/: Cargo.toml  README.md
recall-graph/src/: crud.rs  dedup.rs  embed.rs  extract.rs  ingest.rs  lib.rs  llm.rs  pipeline.rs  pipeline_sync.rs  query.rs  search.rs  store.rs  traverse.rs  types.rs
specs/: bayesian-confidence.md  v0.5-consume-command.md
src/: archive.rs  checkpoint.rs  config.rs  config_cli.rs  consume.rs  conversation.rs  dashboard.rs  distill.rs  ephemeral.rs  error.rs  frontmatter.rs  graph_bridge.rs  graph_cli.rs  index.ts  init.rs  init.ts  jsonl.rs  lib.rs  llm_provider.rs  main.rs  paths.rs  promote.rs  pulse_null.rs  search.rs  status.rs  summarize.rs  tags.rs
src/graph/: confidence.rs  crud.rs  dedup.rs  embed.rs  error.rs  extract.rs  gc.rs  ingest.rs  llm.rs  mod.rs  pipeline.rs  pipeline_sync.rs  query.rs  search.rs  store.rs  traverse.rs  types.rs  util.rs  utility.rs  vigil_sync.rs
templates/: recall-echo.md
tests/: ephemeral.rs  graph_confidence.rs  graph_crud.rs  graph_episodes.rs  graph_gc.rs  graph_traverse.rs
tests/common/: mod.rs
