[package]
name = "recall-echo"
version = "3.5.0"
edition = "2021"
description = "Persistent memory system with knowledge graph — for any LLM tool"
license = "AGPL-3.0-only"
repository = "https://github.com/dnacenta/recall-echo"
keywords = ["ai", "memory", "llm", "conversation", "knowledge-graph"]
categories = ["command-line-utilities"]
authors = ["dnacenta"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

# Graph (default) — knowledge graph with SurrealDB + fastembed
surrealdb = { version = "3", default-features = false, features = ["kv-surrealkv"], optional = true }
fastembed = { version = "4", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
thiserror = { version = "2", optional = true }
futures = { version = "0.3", optional = true }
regex = { version = "1", optional = true }

# LLM HTTP provider (optional) — for entity extraction via Anthropic/OpenAI-compat APIs
reqwest = { version = "0.12", features = ["json"], optional = true }
async-trait = { version = "0.1", optional = true }

# Pulse-null integration (optional) — plugin system for pulse-null entities
pulse-system-types = { version = "0.6", optional = true }

[features]
default = ["graph"]
graph = ["surrealdb", "fastembed", "tokio", "chrono", "thiserror", "futures", "regex", "async-trait"]
llm = ["graph", "reqwest"]
pulse-null = ["pulse-system-types", "async-trait"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
