[package]
name = "recall-echo"
version = "3.5.1"
edition = "2021"
description = "Persistent memory system with knowledge graph — for any LLM tool"
license = "AGPL-3.0-only"
repository = "https://github.com/dnacenta/recall-echo"
keywords = ["ai", "memory", "llm", "conversation", "knowledge-graph"]
categories = ["command-line-utilities"]
authors = ["dnacenta"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

# Graph — knowledge graph with SurrealDB + fastembed (always on)
surrealdb = { version = "3", default-features = false, features = ["kv-surrealkv"] }
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
futures = "0.3"
regex = "1"
async-trait = "0.1"

# LLM HTTP provider (optional) — for entity extraction via Anthropic/OpenAI-compat APIs
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"], optional = true }

# Pulse-null integration (optional) — plugin system for pulse-null entities
pulse-system-types = { version = "0.6", optional = true }

[features]
default = []
llm = ["reqwest"]
pulse-null = ["pulse-system-types"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
